ggplot2 0.8.5 (2009-XX-XX) ----------------------------------------

* geom_text gains parse argument which makes it possible to display
  expressions (implements #50)
* stat_contour & stat_density2d: fix grouping bugs (issue #7)
* stat_contour bump up default number of contours
* stat_density2d: make number of grid points used for density estimation 
  user controllable (implements #9)
* geom_path: linejoin, lineend and linemitre are now user controllable 
  (implements #24)
* facet_wrap now maintains original order of data
* geom_bin now allows you to set whether bins used intervals of the form 
  (a, b] or [a, b) with the "right" parameter (implements #20)
* scales: all scales check that breaks are supplied if labels are, and 
  that breaks and labels are the same length (implements #40)
* scales: if breaks are a named vector, the names will be used as labels
  (thanks to suggestion by David Kahle)
* scales: all scales now have legend parameter, which defaults to TRUE.  
  Setting to false will prevent that scale from contributing to the legends.
  (Implements #27)
* aesthetics: when _setting_ an aesthetic, you may only set it to a single 
  value.  This was always a good idea, but now it is enforced with an 
  informative error message.
* xlim, ylim: fix bug when setting limits of discrete scales