@@ -12,14 +12,11 @@ Scales <- proto(Scale, expr={
   n <- function(.) length(.$.scales)
   
   add <- function(., scale) {
+    # Remove old scale if it exists
     old <- .$find(scale$output())
-
-    if (length(old) > 0 && sum(old) == 1 && is.null(scale$name)) {
-      scale <- scale$clone()
-      scale$name <- .$.scales[old][[1]]$name
-    }
-    
     .$.scales[old] <- NULL
+    
+    # Add new scale
     .$.scales <- append(.$.scales, scale)
   }
 
@@ -56,30 +53,33 @@ Scales <- proto(Scale, expr={
     Filter(function(x) x$trained(), .$.scales)
   }
   
-  get_scales_by_name <- function(., input) {
-    Filter(function(s) deparse(s$name) == input, .$get_trained_scales())
-  }
-  
-  variables <- function(.) {
-    unique(sapply(.$.scales, function(scale) deparse(scale$name)))
-  }
-  
-  legend_desc <- function(.) {
-    # For each input aesthetic, get breaks and labels
-    vars <- .$variables() 
-    names(vars) <- vars
-    compact(lapply(vars, function(var) {
-      scales <- .$get_scales_by_name(var)
-      # Remove scales with legend == FALSE
-      scales <- Filter(function(y) y$legend, scales)
-      if (length(scales) == 0) return()
+  legend_desc <- function(., theme) {
+    # Loop through all scales, creating a list of titles, and a list of keys
+    keys <- titles <- vector("list", .$n())
+    
+    for(i in seq_len(.$n())) {
+      scale <- .$.scales[[i]]
+      if (!scale$legend) next
       
-      breaks <- as.data.frame(lapply(scales, function(s) s$output_breaks()))
-      names(breaks)  <- lapply(scales, function(s) s$output())
+      # Figure out legend title
+      output <- scale$output()
+      if (!is.null(scale$name)) {
+        titles[[i]] <- scale$name
+      } else {
+        titles[[i]] <- theme$labels[[output]]
+      }
       
-      breaks$.labels <- scales[[1]]$labels()
-      breaks
-    }))
+      key <- data.frame(
+        scale$output_breaks(), scale$input_breaks(), I(scale$labels()))
+      names(key) <- c(output, ".value", ".label")
+      
+      keys[[i]] <- key
+    }
+    
+    empty <- sapply(titles, is.null)
+    
+    list(titles = titles[!empty], keys = keys[!empty])
+
   }
   
   position_scales <- function(.) {
@@ -138,9 +138,8 @@ Scales <- proto(Scale, expr={
   # Add default scales.
   # Add default scales to a plot.
   # 
-  # Called everytime a layer is added to the plot, so that default
-  # scales are always available for modification.   The type of a scale is
-  # fixed by the first use in a layer.
+  # Called during final construction to ensure that all aesthetics have 
+  # a scale
   add_defaults <- function(., data, aesthetics, env) {
     if (is.null(aesthetics)) return()
     names(aesthetics) <- laply(names(aesthetics), aes_to_scale)
@@ -150,9 +149,6 @@ Scales <- proto(Scale, expr={
     # No new aesthetics, so no new scales to add
     if(is.null(new_aesthetics)) return()
     
-    # Compute default scale names
-    names <- as.vector(sapply(aesthetics[new_aesthetics], deparse))
-
     # Determine variable type for each column -------------------------------
     vartype <- function(x) {
       if (inherits(x, "Date")) return("date")
@@ -177,18 +173,14 @@ Scales <- proto(Scale, expr={
     scale_name_generic <- paste("scale", vartypes, sep="_")
 
     for(i in 1:length(new_aesthetics)) {
-      s <- tryNULL(get(scale_name_type[i]))
-      if (!is.null(s)) {
-        .$add(s(name=names[i]))
+      scale <- tryNULL(get(scale_name_type[i]))
+      if (!is.null(scale)) {
+        .$add(scale())
       } else {      
-        s <- tryNULL(get(scale_name[i]))
-        if (!is.null(s)) {
-          .$add(s(name=names[i]))
+        scale <- tryNULL(get(scale_name[i]))
+        if (!is.null(scale)) {
+          .$add(scale())
         }
-        # } else {
-        #   s <- tryNULL(get(scale_name_generic[i]))
-        #   .$add(s(name=names[i], variable=new_aesthetics[i]))
-        # }
       }
     }
     
